# feeder_project

./: .env  .gitignore  config.yaml  pyproject.toml  readme.md  requirements.txt
examples/: camera_example.py  gps_example.py
src/: __init__.py  app.py  camera.py  configs.py  gps.py  models.py  motor.py  service.py  utils.py
src/services/: __init__.py  camera.py  gps.py  motor.py
src/tests/: test_gps_parse.py
