[project]
name = "cat-feeder"
version = "0.1.0"
description = "Code for the cat_feeder backend"
authors = [
    {name = "sapdotten"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pyserial (>=3.5,<4.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "opi-gpio (>=0.5.2,<0.6.0)"
]
[tool.pytest.ini_options]
addopts = "-ra -q --import-mode=importlib"
testpaths = ["src/tests"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks.ruff-fix]
shell = "ruff check --no-cache --output-format grouped --fix --show-fixes --config .ruff.toml ."

